refactors, bug fixes, and early ink squid mode
- StairsBlockWithEntity, intended functionality will be replaced when inked blocks exist
* renamed Colorable to Inkable
* fixed block colour client-server de/sync
* moved damage sources to dedicated class
* tweaked damage sources
+ Ink Squid dummy entity
+ catch for creation of new configuration options
+ color lock config option, does almost nothing
* improved InkableEntity
+ player squid form (no model implemented currently)
* reorganised gamerules
* heavily organised/optimised ColorUtils/InkBlockUtils/InkDamageUtils
* fixed setinkcolor command desync
* fixed setinkcolor autocompletion on servers

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -228,6 +228,8 @@
     "item.splatcraft.armored_ink_tank": "Armored Ink Tank",
     "item.splatcraft.hero_ink_tank": "Hero Tank",
 
+    "item.splatcraft.ink_squid_spawn_egg": "Ink Squid Spawn Egg",
+
     "weaponStat.range": "Range: %s%%",
     "weaponStat.damage": "Damage: %s%%",
     "weaponStat.impact": "Impact: %s%%",
@@ -355,27 +357,30 @@
     "splatcraft.ink_color.minecraft:red": "Organic Red",
     "splatcraft.ink_color.minecraft:black": "Organic Black",
 
-    "death.attack.water": "%s dissolved in water",
-    "death.attack.splat": "%s was splatted by %s",
-    "death.attack.splat.item": "%s was splatted by %s using %s",
-    "death.attack.roll": "%s was crushed by %s",
-    "death.attack.roll.item": "%s was crushed by %s using %s",
-    "death.attack.squish": "%s was squished by %s",
-    "death.attack.squish.item": "%s was squished by %s using %s",
+    "death.attack.splatcraft.outOfBounds": "%s tried to escape the stage",
+    "death.attack.splatcraft.enemyInk": "%s was intoxicated by enemy ink",
+    "death.attack.splatcraft.dissolve": "%s dissolved in water",
+    "death.attack.splatcraft.splat": "%s was splatted by %s",
+    "death.attack.splatcraft.splat.item": "%s was splatted by %s using %s",
+    "death.attack.splatcraft.roll": "%s was crushed by %s",
+    "death.attack.splatcraft.roll.item": "%s was crushed by %s using %s",
+    "death.attack.splatcraft.squish": "%s was squished by %s",
+    "death.attack.splatcraft.squish.item": "%s was squished by %s using %s",
 
     "entity.splatcraft.ink_projectile": "Ink Projectile",
-    "entity.splatcraft.ink_squid": "Squid",
+    "entity.splatcraft.ink_squid": "Ink Squid",
     "entity.splatcraft.squid_bumper": "Squid Bumper",
 
     "gamerule.splatcraft.inkDecay": "Ink decay",
     "gamerule.splatcraft.coloredNameplates": "Ink-colored player names",
-    "gamerule.splatcraft.keepMatchItems": "Keep Match items after death",
-    "gamerule.splatcraft.keepMatchItems.description": "Lets you keep certain items important to Splatcraft matches, such as main weapons, ink tanks and some cosmetics, after dying. These items can be specified with the splatcraft:match_items tag",
     "gamerule.splatcraft.waterDamage": "Deal water damage",
-    "gamerule.splatcraft.dropCrateLoot": "Drop Sunken Crate loot when mined",
-    "gamerule.splatcraft.requireInkTank": "Require ink when using Splatcraft Weapons",
+    "gamerule.splatcraft.dropCrateLoot": "Drop sunken crate loot when mined",
+    "gamerule.splatcraft.requireInkTank": "Require ink when using Splatcraft weapons",
+    "gamerule.splatcraft.inkDamage": "Deal Ink Damage",
+    "gamerule.splatcraft.keepMatchItems": "Keep match items after death",
+    "gamerule.splatcraft.keepMatchItems.description": "Lets you keep certain items important to Splatcraft matches",
     "gamerule.splatcraft.universalInk": "Universal Ink",
-    "gamerule.splatcraft.universalInk.description": "Allows players to swim on enemy ink.",
+    "gamerule.splatcraft.universalInk.description": "Allows players to swim on enemy ink",
     "gamerule.splatcraft.inkFriendlyFire": "Ink Friendly Fire",
     "gamerule.splatcraft.inkFriendlyFire.description": "Allows ink to damage players with their same color",
     "gamerule.splatcraft.inkMobDamage": "Ink Mob Damage",
@@ -426,8 +431,11 @@
 
     "config.splatcraft.title": "Splatcraft",
     "config.splatcraft.category.render": "Render",
-    "config.splatcraft.category.render.hold_stage_barrier_to_render": "Hold stage barrier to render",
+    "config.splatcraft.category.render.hold_stage_barrier_to_render": "Hold Stage Barrier to Render",
     "config.splatcraft.category.render.hold_stage_barrier_to_render.tooltip": "Enable or disable having to hold stage barriers or voids to render.",
-    "config.splatcraft.category.render.barrier_render_distance": "Barrier render distance",
-    "config.splatcraft.category.render.barrier_render_distance.tooltip": "How far away stage barriers or voids will render away from you."
+    "config.splatcraft.category.render.barrier_render_distance": "Barrier Render Distance",
+    "config.splatcraft.category.render.barrier_render_distance.tooltip": "How far away stage barriers or voids will render away from you.",
+    "config.splatcraft.category.colors": "Colors",
+    "config.splatcraft.category.colors.color_lock": "Color Lock",
+    "config.splatcraft.category.colors.color_lock.tooltip": "Enable or disable color lock."
 }
