--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -405,9 +405,10 @@
     "status.change_color.success": "Successfully recolored %s blocks to %s",
 
     "commands.splatcraft.scanturf.success": "Successfully scanned %s blocks of turf",
-    "commands.splatcraft.setinkcolor.error.single": "%s's ink color was already %s",
-    "commands.splatcraft.setinkcolor.success.single": "Changed %s's ink color to %s",
-    "commands.splatcraft.setinkcolor.success.multiple": "Changed the ink color of %s players to %s",
+    "commands.splatcraft.setinkcolor.self.failure": "%s's ink color was already %s",
+    "commands.splatcraft.setinkcolor.self.success": "Changed %s's ink color to %s",
+    "commands.splatcraft.setinkcolor.other.success": "Changed the ink color of %s entities to %s",
+    "commands.splatcraft.setinkcolor.other.failure": "Could not set the ink colour of any entities",
     "commands.splatcraft.colorscores.add.success": "Successfully added new criteria for the color %s",
     "commands.splatcraft.colorscores.add.duplicate": "Criteria with the color %s already exists",
     "commands.splatcraft.colorscores.remove.success": "Successfully removed criteria for the color %s",
