simplify submerge invisibility checks

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -286,27 +286,27 @@
     "weaponType.mk2": "Mk II",
     "weaponType.mk3": "Mk III",
 
-    "subtitle.shooter_firing": "Shooter Firing",
-    "subtitle.blaster_firing": "Blaster Firing",
-    "subtitle.blaster_explosion": "Blaster Projectile Explodes",
-    "subtitle.roller_fling": "Roller Flung",
-    "subtitle.roller_roll": "Roller Rolls",
-    "subtitle.charger_charge": "Charger Charging",
-    "subtitle.charger_ready": "Charger Ready",
-    "subtitle.charger_shot": "Charger Fired",
-    "subtitle.dualie_firing": "Dualies Firing",
-    "subtitle.dualie_dodge": "Dualie Dodge",
-    "subtitle.slosher_shot": "Slosher Fired",
-    "subtitle.sub_throw": "Sub Weapon Thrown",
-    "subtitle.sub_detonating": "Sub Weapon Detonating",
-    "subtitle.sub_detonated": "Sub Weapon Detonated",
-    "subtitle.remote_use": "Remote Buzzing",
-    "subtitle.no_ink": "Weapon out of Ink",
-    "subtitle.no_ink_sub": "Sub Weapon out of Ink",
-    "subtitle.squid_transform": "Kid turns into Squid",
-    "subtitle.squid_revert": "Squid turns into Kid",
-    "subtitle.ink_submerge": "Squid Submerges",
-    "subtitle.ink_surface": "Squid Surfaces",
+    "subtitle.splatcraft.shooter_firing": "Shooter Firing",
+    "subtitle.splatcraft.blaster_firing": "Blaster Firing",
+    "subtitle.splatcraft.blaster_explosion": "Blaster Projectile Explodes",
+    "subtitle.splatcraft.roller_fling": "Roller Flung",
+    "subtitle.splatcraft.roller_roll": "Roller Rolls",
+    "subtitle.splatcraft.charger_charge": "Charger Charging",
+    "subtitle.splatcraft.charger_ready": "Charger Ready",
+    "subtitle.splatcraft.charger_shot": "Charger Fired",
+    "subtitle.splatcraft.dualie_firing": "Dualies Firing",
+    "subtitle.splatcraft.dualie_dodge": "Dualie Dodge",
+    "subtitle.splatcraft.slosher_shot": "Slosher Fired",
+    "subtitle.splatcraft.sub_throw": "Sub Weapon Thrown",
+    "subtitle.splatcraft.sub_detonating": "Sub Weapon Detonating",
+    "subtitle.splatcraft.sub_detonated": "Sub Weapon Detonated",
+    "subtitle.splatcraft.remote_use": "Remote Buzzing",
+    "subtitle.splatcraft.no_ink": "Weapon out of Ink",
+    "subtitle.splatcraft.no_ink_sub": "Sub Weapon out of Ink",
+    "subtitle.splatcraft.squid_transform": "Kid turns into Squid",
+    "subtitle.splatcraft.squid_revert": "Squid turns into Kid",
+    "subtitle.splatcraft.ink_submerge": "Squid Submerges",
+    "subtitle.splatcraft.ink_surface": "Squid Surfaces",
 
     "container.ink_vat": "Inkwell Crafting",
     "container.weapon_workbench": "Weapon Crafting",
