--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -489,7 +489,17 @@
     "config.splatcraft.category.render.barrier_render_distance.tooltip": "How far away stage barriers or voids will render away from you.",
     "config.splatcraft.category.render.inked_blocks_color_layer_is_transparent": "Inked Blocks' Color Layer Is Transparent",
     "config.splatcraft.category.render.inked_blocks_color_layer_is_transparent.tooltip": "Enable or disable inked blocks' color layer being transparent.",
-    "config.splatcraft.category.render.inked_blocks_color_layer_is_transparent.tooltip.toggled": "A config change requires you to reload chunks! (F3 + A)",
+    "config.splatcraft.category.ui": "UI",
+    "config.splatcraft.category.ui.invisible_hotbar_when_squid": "Invisible Hotbar When Squid",
+    "config.splatcraft.category.ui.invisible_hotbar_when_squid.tooltip": "Enable or disable disabling the hotbar when in squid form.",
+    "config.splatcraft.category.ui.invisible_hotbar_status_bars_shift": "Invisible Hotbar Status Bars Shift Amount",
+    "config.splatcraft.category.ui.invisible_hotbar_status_bars_shift.tooltip": "How far the status bars should shift when the hotbar is invisible.",
+    "config.splatcraft.category.ui.invisible_crosshair_when_squid": "Invisible Crosshair When Squid",
+    "config.splatcraft.category.ui.invisible_crosshair_when_squid.tooltip": "Enable or disable disabling the crosshair when in squid form.",
+    "config.splatcraft.category.ui.ink_colored_crosshair_when_squid": "Ink-Colored Crosshair When Squid",
+    "config.splatcraft.category.ui.ink_colored_crosshair_when_squid.tooltip": "Enable or disable an ink-colored crosshair when in squid form.",
+    "config.splatcraft.category.ui.ink_amount_indicator": "Ink Amount Indicator",
+    "config.splatcraft.category.ui.ink_amount_indicator.tooltip": "Choose where the ink amount indicator is displayed, if at all.",
     "config.splatcraft.category.colors": "Colors",
     "config.splatcraft.category.colors.color_lock": "Color Lock",
     "config.splatcraft.category.colors.color_lock.tooltip": "Enable or disable color lock."
