--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -490,6 +490,8 @@
     "config.splatcraft.category.render.inked_blocks_color_layer_is_transparent": "Inked Blocks' Color Layer Is Transparent",
     "config.splatcraft.category.render.inked_blocks_color_layer_is_transparent.tooltip": "Enable or disable inked blocks' color layer being transparent.",
     "config.splatcraft.category.ui": "UI",
+    "config.splatcraft.category.ui.prevent_bob_view_when_squid": "Prevent View Bobbing When Squid",
+    "config.splatcraft.category.ui.prevent_bob_view_when_squid.tooltip": "Choose when view bobbing should occur when in squid form, if at all.",
     "config.splatcraft.category.ui.invisible_hotbar_when_squid": "Invisible Hotbar When Squid",
     "config.splatcraft.category.ui.invisible_hotbar_when_squid.tooltip": "Enable or disable disabling the hotbar when in squid form.",
     "config.splatcraft.category.ui.invisible_hotbar_status_bars_shift": "Invisible Hotbar Status Bars Shift Amount",
