fix jump momentum as a squid

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -493,6 +493,10 @@
     "config.splatcraft.category.ui": "UI",
     "config.splatcraft.category.ui.prevent_bob_view_when_squid": "Prevent View Bobbing When Squid",
     "config.splatcraft.category.ui.prevent_bob_view_when_squid.tooltip": "Choose when view bobbing should occur when in squid form, if at all.",
+    "config.splatcraft.category.ui.modify_fov_for_squid_form": "Modify FOV For Squid Form",
+    "config.splatcraft.category.ui.modify_fov_for_squid_form.tooltip": "Enable or disable modifying the player's fov if in squid form.",
+    "config.splatcraft.category.ui.fov_for_squid_form": "FOV For Squid Form",
+    "config.splatcraft.category.ui.fov_for_squid_form.tooltip": "How much to modify the player's fov if in squid form.",
     "config.splatcraft.category.ui.invisible_hotbar_when_squid": "Invisible Hotbar When Squid",
     "config.splatcraft.category.ui.invisible_hotbar_when_squid.tooltip": "Enable or disable disabling the hotbar when in squid form.",
     "config.splatcraft.category.ui.render_held_item_when_hotbar_invisible": "Render Held Item When Hotbar Is Invisible",
