add ink config category

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -505,19 +505,19 @@
     "config.splatcraft.category.ui.invisible_hotbar_status_bars_shift.tooltip": "How far the status bars should shift when the hotbar is invisible.",
     "config.splatcraft.category.ui.invisible_crosshair_when_squid": "Invisible Crosshair When Squid",
     "config.splatcraft.category.ui.invisible_crosshair_when_squid.tooltip": "Enable or disable disabling the crosshair when in squid form.",
-    "config.splatcraft.category.ui.ink_colored_crosshair_when_squid": "Ink-Colored Crosshair When Squid",
-    "config.splatcraft.category.ui.ink_colored_crosshair_when_squid.tooltip": "Enable or disable an ink-colored crosshair when in squid form.",
-    "config.splatcraft.category.ui.ink_amount_indicator": "Ink Amount Indicator",
-    "config.splatcraft.category.ui.ink_amount_indicator.tooltip": "Choose where the ink amount indicator is displayed, if at all.",
-    "config.splatcraft.category.ui.ink_amount_indicator_always_visible": "Ink Amount Indicator Always Visible",
-    "config.splatcraft.category.ui.ink_amount_indicator_always_visible.tooltip": "Enable or disable the ink amount indicator always being visible if an ink tank is present.",
-    "config.splatcraft.category.ui.ink_amount_exclamations": "Ink Amount Indicator Exclamations",
-    "config.splatcraft.category.ui.ink_amount_exclamations.tooltip": "Enable or disable the ink amount indicator displaying exclamation points when full or empty.",
-    "config.splatcraft.category.ui.ink_amount_exclamations_min": "Ink Amount Indicator Exclamations Minimum",
-    "config.splatcraft.category.ui.ink_amount_exclamations_min.tooltip": "When the ink amount indicator low ink warning should display.",
-    "config.splatcraft.category.ui.ink_amount_exclamations_max": "Ink Amount Indicator Exclamations Maximum",
-    "config.splatcraft.category.ui.ink_amount_exclamations_max.tooltip": "When the ink amount indicator full ink warning should display.",
-    "config.splatcraft.category.colors": "Colors",
-    "config.splatcraft.category.colors.color_lock": "Color Lock",
-    "config.splatcraft.category.colors.color_lock.tooltip": "Enable or disable color lock."
+    "config.splatcraft.category.ink": "Ink",
+    "config.splatcraft.category.ink.color_lock": "Color Lock",
+    "config.splatcraft.category.ink.color_lock.tooltip": "Enable or disable color lock.",
+    "config.splatcraft.category.ink.ink_colored_crosshair_when_squid": "Ink-Colored Crosshair When Squid",
+    "config.splatcraft.category.ink.ink_colored_crosshair_when_squid.tooltip": "Enable or disable an ink-colored crosshair when in squid form.",
+    "config.splatcraft.category.ink.ink_amount_indicator": "Amount Indicator",
+    "config.splatcraft.category.ink.ink_amount_indicator.tooltip": "Choose where the ink amount indicator is displayed, if at all.",
+    "config.splatcraft.category.ink.ink_amount_indicator_always_visible": "Amount Indicator Always Visible",
+    "config.splatcraft.category.ink.ink_amount_indicator_always_visible.tooltip": "Enable or disable the ink amount indicator always being visible if an ink tank is present.",
+    "config.splatcraft.category.ink.ink_amount_exclamations": "Amount Indicator Exclamations",
+    "config.splatcraft.category.ink.ink_amount_exclamations.tooltip": "Enable or disable the ink amount indicator displaying exclamation points when full or empty.",
+    "config.splatcraft.category.ink.ink_amount_exclamations_min": "Amount Indicator Exclamations Minimum",
+    "config.splatcraft.category.ink.ink_amount_exclamations_min.tooltip": "When the ink amount indicator low ink warning should display.",
+    "config.splatcraft.category.ink.ink_amount_exclamations_max": "Amount Indicator Exclamations Maximum",
+    "config.splatcraft.category.ink.ink_amount_exclamations_max.tooltip": "When the ink amount indicator full ink warning should display."
 }
