fix dediserver-client syncing of custom colors + more color lock options

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -26,134 +26,9 @@
     "block.splatcraft.sardinium_block": "Block of Sardinium",
     "block.splatcraft.sardinium_ore": "Sardinium Ore",
 
-    "block.splatcraft.canvas": "Canvas",
-    "block.splatcraft.canvas.splatcraft:none": "Undyed Canvas",
-    "block.splatcraft.canvas.splatcraft:orange": "Orange Canvas",
-    "block.splatcraft.canvas.splatcraft:blue": "Blue Canvas",
-    "block.splatcraft.canvas.splatcraft:green": "Green Canvas",
-    "block.splatcraft.canvas.splatcraft:pink": "Pink Canvas",
-    "block.splatcraft.canvas.splatcraft:light_blue": "Light Blue Canvas",
-    "block.splatcraft.canvas.splatcraft:turquoise": "Turquoise Canvas",
-    "block.splatcraft.canvas.splatcraft:yellow": "Yellow Canvas",
-    "block.splatcraft.canvas.splatcraft:lilac": "Lilac Canvas",
-    "block.splatcraft.canvas.splatcraft:lemon": "Lemon Canvas",
-    "block.splatcraft.canvas.splatcraft:plum": "Plum Canvas",
-    "block.splatcraft.canvas.splatcraft:mint": "Mint Canvas",
-    "block.splatcraft.canvas.splatcraft:cyan": "Cyan Canvas",
-    "block.splatcraft.canvas.splatcraft:cherry": "Cherry Canvas",
-    "block.splatcraft.canvas.splatcraft:peach": "Peach Canvas",
-    "block.splatcraft.canvas.splatcraft:neon_orange": "Neon Orange Canvas",
-    "block.splatcraft.canvas.splatcraft:neon_blue": "Neon Blue Canvas",
-    "block.splatcraft.canvas.splatcraft:neon_green": "Neon Green Canvas",
-    "block.splatcraft.canvas.splatcraft:neon_pink": "Neon Pink Canvas",
-    "block.splatcraft.canvas.splatcraft:hero_yellow": "Hero Yellow Canvas",
-    "block.splatcraft.canvas.splatcraft:octo_pink": "Octo Pink Canvas",
-    "block.splatcraft.canvas.splatcraft:cobalt": "Cobalt Canvas",
-    "block.splatcraft.canvas.splatcraft:mojang": "Red Thing Canvas",
-    "block.splatcraft.canvas.splatcraft:ice": "Icy Mint Canvas",
-    "block.splatcraft.canvas.splatcraft:floral": "Floral Pink Canvas",
-    "block.splatcraft.canvas.minecraft:white": "Organic White Canvas",
-    "block.splatcraft.canvas.minecraft:orange": "Organic Orange Canvas",
-    "block.splatcraft.canvas.minecraft:magenta": "Organic Magenta Canvas",
-    "block.splatcraft.canvas.minecraft:light_blue": "Organic Light Blue Canvas",
-    "block.splatcraft.canvas.minecraft:yellow": "Organic Yellow Canvas",
-    "block.splatcraft.canvas.minecraft:lime": "Organic Lime Canvas",
-    "block.splatcraft.canvas.minecraft:pink": "Organic Pink Canvas",
-    "block.splatcraft.canvas.minecraft:gray": "Organic Gray Canvas",
-    "block.splatcraft.canvas.minecraft:light_gray": "Organic Light Gray Canvas",
-    "block.splatcraft.canvas.minecraft:cyan": "Organic Cyan Canvas",
-    "block.splatcraft.canvas.minecraft:purple": "Organic Purple Canvas",
-    "block.splatcraft.canvas.minecraft:blue": "Organic Blue Canvas",
-    "block.splatcraft.canvas.minecraft:brown": "Organic Brown Canvas",
-    "block.splatcraft.canvas.minecraft:green": "Organic Green Canvas",
-    "block.splatcraft.canvas.minecraft:red": "Organic Red Canvas",
-    "block.splatcraft.canvas.minecraft:black": "Organic Black Canvas",
-
-    "item.splatcraft.squid_bumper": "Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:none": "Undyed Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:orange": "Orange Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:blue": "Blue Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:green": "Green Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:pink": "Pink Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:light_blue": "Light Blue Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:turquoise": "Turquoise Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:yellow": "Yellow Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:lilac": "Lilac Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:lemon": "Lemon Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:plum": "Plum Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:mint": "Mint Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:cyan": "Cyan Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:cherry": "Cherry Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:peach": "Peach Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:neon_orange": "Neon Orange Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:neon_blue": "Neon Blue Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:neon_green": "Neon Green Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:neon_pink": "Neon Pink Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:hero_yellow": "Hero Yellow Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:octo_pink": "Octo Pink Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:cobalt": "Cobalt Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:mojang": "Red Thing Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:ice": "Icy Mint Squid Bumper",
-    "item.splatcraft.squid_bumper.splatcraft:floral": "Floral Pink Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:white": "Organic White Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:orange": "Organic Orange Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:magenta": "Organic Magenta Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:light_blue": "Organic Light Blue Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:yellow": "Organic Yellow Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:lime": "Organic Lime Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:pink": "Organic Pink Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:gray": "Organic Gray Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:light_gray": "Organic Light Gray Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:cyan": "Organic Cyan Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:purple": "Organic Purple Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:blue": "Organic Blue Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:brown": "Organic Brown Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:green": "Organic Green Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:red": "Organic Red Squid Bumper",
-    "item.splatcraft.squid_bumper.minecraft:black": "Organic Black Squid Bumper",
-
-    "block.splatcraft.inkwell": "Inkwell",
-    "block.splatcraft.inkwell.splatcraft:none": "Undyed Inkwell",
-    "block.splatcraft.inkwell.splatcraft:orange": "Orange Inkwell",
-    "block.splatcraft.inkwell.splatcraft:blue": "Blue Inkwell",
-    "block.splatcraft.inkwell.splatcraft:green": "Green Inkwell",
-    "block.splatcraft.inkwell.splatcraft:pink": "Pink Inkwell",
-    "block.splatcraft.inkwell.splatcraft:light_blue": "Light Blue Inkwell",
-    "block.splatcraft.inkwell.splatcraft:turquoise": "Turquoise Inkwell",
-    "block.splatcraft.inkwell.splatcraft:yellow": "Yellow Inkwell",
-    "block.splatcraft.inkwell.splatcraft:lilac": "Lilac Inkwell",
-    "block.splatcraft.inkwell.splatcraft:lemon": "Lemon Inkwell",
-    "block.splatcraft.inkwell.splatcraft:plum": "Plum Inkwell",
-    "block.splatcraft.inkwell.splatcraft:mint": "Mint Inkwell",
-    "block.splatcraft.inkwell.splatcraft:cyan": "Cyan Inkwell",
-    "block.splatcraft.inkwell.splatcraft:cherry": "Cherry Inkwell",
-    "block.splatcraft.inkwell.splatcraft:peach": "Peach Inkwell",
-    "block.splatcraft.inkwell.splatcraft:neon_orange": "Neon Orange Inkwell",
-    "block.splatcraft.inkwell.splatcraft:neon_blue": "Neon Blue Inkwell",
-    "block.splatcraft.inkwell.splatcraft:neon_green": "Neon Green Inkwell",
-    "block.splatcraft.inkwell.splatcraft:neon_pink": "Neon Pink Inkwell",
-    "block.splatcraft.inkwell.splatcraft:hero_yellow": "Hero Yellow Inkwell",
-    "block.splatcraft.inkwell.splatcraft:octo_pink": "Octo Pink Inkwell",
-    "block.splatcraft.inkwell.splatcraft:cobalt": "Cobalt Inkwell",
-    "block.splatcraft.inkwell.splatcraft:mojang": "Red Thing Inkwell",
-    "block.splatcraft.inkwell.splatcraft:ice": "Icy Mint Inkwell",
-    "block.splatcraft.inkwell.splatcraft:floral": "Floral Pink Inkwell",
-    "block.splatcraft.inkwell.minecraft:white": "Organic White Inkwell",
-    "block.splatcraft.inkwell.minecraft:orange": "Organic Orange Inkwell",
-    "block.splatcraft.inkwell.minecraft:magenta": "Organic Magenta Inkwell",
-    "block.splatcraft.inkwell.minecraft:light_blue": "Organic Light Blue Inkwell",
-    "block.splatcraft.inkwell.minecraft:yellow": "Organic Yellow Inkwell",
-    "block.splatcraft.inkwell.minecraft:lime": "Organic Lime Inkwell",
-    "block.splatcraft.inkwell.minecraft:pink": "Organic Pink Inkwell",
-    "block.splatcraft.inkwell.minecraft:gray": "Organic Gray Inkwell",
-    "block.splatcraft.inkwell.minecraft:light_gray": "Organic Light Gray Inkwell",
-    "block.splatcraft.inkwell.minecraft:cyan": "Organic Cyan Inkwell",
-    "block.splatcraft.inkwell.minecraft:purple": "Organic Purple Inkwell",
-    "block.splatcraft.inkwell.minecraft:blue": "Organic Blue Inkwell",
-    "block.splatcraft.inkwell.minecraft:brown": "Organic Brown Inkwell",
-    "block.splatcraft.inkwell.minecraft:green": "Organic Green Inkwell",
-    "block.splatcraft.inkwell.minecraft:red": "Organic Red Inkwell",
-    "block.splatcraft.inkwell.minecraft:black": "Organic Black Inkwell",
+    "block.splatcraft.canvas": "%s Canvas",
+    "item.splatcraft.squid_bumper": "%s Squid Bumper",
+    "block.splatcraft.inkwell": "%s Inkwell",
 
     "block.splatcraft.ink_vat": "Ink Vat",
     "block.splatcraft.weapon_workbench": "Ammo Knights Weapon Workbench",
@@ -507,8 +382,6 @@
     "config.splatcraft.category.ui.invisible_crosshair_when_squid": "Invisible Crosshair When Squid",
     "config.splatcraft.category.ui.invisible_crosshair_when_squid.tooltip": "Enable or disable disabling the crosshair when in squid form.",
     "config.splatcraft.category.ink": "Ink",
-    "config.splatcraft.category.ink.color_lock": "Color Lock",
-    "config.splatcraft.category.ink.color_lock.tooltip": "Enable or disable color lock.",
     "config.splatcraft.category.ink.ink_colored_crosshair_when_squid": "Ink-Colored Crosshair When Squid",
     "config.splatcraft.category.ink.ink_colored_crosshair_when_squid.tooltip": "Enable or disable an ink-colored crosshair when in squid form.",
     "config.splatcraft.category.ink.ink_amount_indicator": "Amount Indicator",
@@ -520,5 +393,12 @@
     "config.splatcraft.category.ink.ink_amount_exclamations_min": "Amount Indicator Exclamations Minimum",
     "config.splatcraft.category.ink.ink_amount_exclamations_min.tooltip": "When the ink amount indicator low ink warning should display.",
     "config.splatcraft.category.ink.ink_amount_exclamations_max": "Amount Indicator Exclamations Maximum",
-    "config.splatcraft.category.ink.ink_amount_exclamations_max.tooltip": "When the ink amount indicator full ink warning should display."
+    "config.splatcraft.category.ink.ink_amount_exclamations_max.tooltip": "When the ink amount indicator full ink warning should display.",
+    "config.splatcraft.category.accessibility": "Accessibility",
+    "config.splatcraft.category.accessibility.color_lock": "Color Lock",
+    "config.splatcraft.category.accessibility.color_lock.tooltip": "Enable or disable color lock.",
+    "config.splatcraft.category.accessibility.color_lock_friendly": "Color Lock Friendly",
+    "config.splatcraft.category.accessibility.color_lock_friendly.tooltip": "Your color when color lock is enabled.",
+    "config.splatcraft.category.accessibility.color_lock_hostile": "Color Lock Hostile",
+    "config.splatcraft.category.accessibility.color_lock_hostile.tooltip": "Others' color when color lock is enabled."
 }
