fix ink consumption literally everywhere

--- a/src/main/resources/assets/splatcraft/lang/en_us.json
+++ b/src/main/resources/assets/splatcraft/lang/en_us.json
@@ -63,7 +63,7 @@
     "item.splatcraft.ink_cloth_chestplate": "Ink Cloth Shirt",
     "item.splatcraft.ink_cloth_leggings": "Ink Cloth Pants",
     "item.splatcraft.ink_cloth_boots": "Ink Cloth Shoes",
-    "item.splatcraft.ink_cloth_armor.tooltip.colorless": "Matches your ink color!",
+    "item.splatcraft.tooltip.colorless": "Matches your ink color!",
     "item.splatcraft.splatfest_band": "Splatfest Band",
 
     "item.splatcraft.splattershot": "Splattershot",
